Adding Commit as A marker --- There is a race condition here when messages are sent. Demo this in evaluation