@@ -1,27 +1,32 @@
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import org.json.JSONObject;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+
 import javax.net.ssl.HttpsURLConnection;
+
 import org.json.JSONObject;
 
 
 public class TimeCheck {
     public static long UTCTime() throws Exception{
-        URL url = new URL("https://worldtimeapi.org/api/timezone/UTC");
-        HttpURLConnection connection = (HttpsURLConnection) url.openConnection();
-        connection.setConnectTimeout(3000);
-        connection.setReadTimeout(3000);
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder()
+        .uri(URI.create("https://timeapi.io/api/time/current/zone?timeZone=UTC"))
+        .GET()
+        .build();
+        
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        JSONObject json = new JSONObject(response.body());
+        
+        String dateTime = json.getString("dateTime");
+        String trimmed = dateTime.substring(0,19);
+        LocalDateTime LDT = LocalDateTime.parse(trimmed);
+        return LDT.toEpochSecond(ZoneOffset.UTC);
 
-        BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-        StringBuilder respond = new StringBuilder();
-        String input; 
-        while ((input = reader.readLine()) != null) {
-            respond.append(input);
-        }
-        reader.close();
-        JSONObject json = new JSONObject(respond.toString());
-        return json.getLong("unixtime");
     }
 
 }
